cmake_minimum_required(VERSION 3.4.1)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -ftemplate-depth=1024 -fvisibility=hidden -ffunction-sections -fdata-sections\
            -DGOOGLE_PROTOBUF_NO_RTTI -frtti -Wno-reserved-user-defined-literal\
            -fsigned-char -Wno-extern-c-compat -fexceptions")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-exceptions -fno-rtti -DGOOGLE_PROTOBUF_NO_RTTI")

set(CMAKE_CXX_STANDARD 14)

ADD_DEFINITIONS (-DDARWIN_NO_CARBON)
ADD_DEFINITIONS (-DFT2_BUILD_LIBRARY)


add_library(skia STATIC
                skia/src/core/SkAAClip.cpp
                skia/src/core/SkAnnotation.cpp
                skia/src/core/SkAdvancedTypefaceMetrics.cpp
                skia/src/core/SkAlphaRuns.cpp
                skia/src/core/SkBBHFactory.cpp
                skia/src/core/SkBBoxRecord.cpp
            	skia/src/core/SkBBoxHierarchyRecord.cpp
            	skia/src/core/SkBitmap.cpp
            	skia/src/core/SkBitmapDevice.cpp
            	skia/src/core/SkBitmapFilter.cpp
            	skia/src/core/SkBitmapHeap.cpp
            	skia/src/core/SkBitmapProcShader.cpp
            	skia/src/core/SkBitmapProcState.cpp
            	skia/src/core/SkBitmapProcState_matrixProcs.cpp
            	skia/src/core/SkBitmapScaler.cpp
            	skia/src/core/SkBitmap_scroll.cpp
            	skia/src/core/SkBlitMask_D32.cpp
            	skia/src/core/SkBlitRow_D16.cpp
            	skia/src/core/SkBlitRow_D32.cpp
            	skia/src/core/SkBlitter.cpp
            	skia/src/core/SkBlitter_A8.cpp
            	skia/src/core/SkBlitter_ARGB32.cpp
            	skia/src/core/SkBlitter_RGB16.cpp
            	skia/src/core/SkBlitter_Sprite.cpp
            	skia/src/core/SkBuffer.cpp
            	skia/src/core/SkCanvas.cpp
            	skia/src/core/SkChunkAlloc.cpp
            	skia/src/core/SkClipStack.cpp
            	skia/src/core/SkColor.cpp
            	skia/src/core/SkColorFilter.cpp
            	skia/src/core/SkColorTable.cpp
            	skia/src/core/SkComposeShader.cpp
            	skia/src/core/SkConfig8888.cpp
            	skia/src/core/SkConvolver.cpp
            	skia/src/core/SkCubicClipper.cpp
            	skia/src/core/SkData.cpp
            	skia/src/core/SkDataTable.cpp
            	skia/src/core/SkDebug.cpp
            	skia/src/core/SkDeque.cpp
            	skia/src/core/SkDevice.cpp
            	skia/src/core/SkDeviceLooper.cpp
            	skia/src/core/SkDeviceProfile.cpp
            	skia/src/lazy/SkDiscardableMemoryPool.cpp
            	skia/src/lazy/SkDiscardablePixelRef.cpp
            	skia/src/core/SkDistanceFieldGen.cpp
            	skia/src/core/SkDither.cpp
            	skia/src/core/SkDraw.cpp
            	skia/src/core/SkDrawLooper.cpp
            	skia/src/core/SkEdgeBuilder.cpp
            	skia/src/core/SkEdgeClipper.cpp
            	skia/src/core/SkEdge.cpp
            	skia/src/core/SkError.cpp
            	skia/src/core/SkFilterProc.cpp
            	skia/src/core/SkFilterShader.cpp
            	skia/src/core/SkFlattenable.cpp
            	skia/src/core/SkFlattenableSerialization.cpp
            	skia/src/core/SkFloat.cpp
            	skia/src/core/SkFloatBits.cpp
            	skia/src/core/SkFont.cpp
            	skia/src/core/SkFontHost.cpp
            	skia/src/core/SkFontDescriptor.cpp
            	skia/src/core/SkFontStream.cpp
            	skia/src/core/SkGeometry.cpp
            	skia/src/core/SkGlyphCache.cpp
            	skia/src/core/SkGraphics.cpp
            	skia/src/core/SkInstCnt.cpp
            	skia/src/core/SkImageFilter.cpp
            	skia/src/core/SkImageInfo.cpp
            	skia/src/core/SkImageGenerator.cpp
            	skia/src/core/SkLocalMatrixShader.cpp
            	skia/src/core/SkLineClipper.cpp
            	skia/src/core/SkMallocPixelRef.cpp
            	skia/src/core/SkMask.cpp
            	skia/src/core/SkMaskFilter.cpp
            	skia/src/core/SkMaskGamma.cpp
            	skia/src/core/SkMath.cpp
            	skia/src/core/SkMatrix.cpp
            	skia/src/core/SkMatrixClipStateMgr.cpp
            	skia/src/core/SkMetaData.cpp
            	skia/src/core/SkMipMap.cpp
            	skia/src/core/SkPackBits.cpp
            	skia/src/core/SkPaint.cpp
            	skia/src/core/SkPaintOptionsAndroid.cpp
            	skia/src/core/SkPaintPriv.cpp
            	skia/src/core/SkPath.cpp
            	skia/src/core/SkPathEffect.cpp
            	skia/src/core/SkPathHeap.cpp
            	skia/src/core/SkPathMeasure.cpp
            	skia/src/core/SkPathRef.cpp
            	skia/src/core/SkPicture.cpp
            	skia/src/core/SkPictureFlat.cpp
            	skia/src/core/SkPicturePlayback.cpp
            	skia/src/core/SkPictureRecord.cpp
            	skia/src/core/SkPictureRecorder.cpp
            	skia/src/core/SkPictureShader.cpp
            	skia/src/core/SkPictureStateTree.cpp
            	skia/src/core/SkPixelRef.cpp
            	skia/src/core/SkPoint.cpp
            	skia/src/core/SkProcSpriteBlitter.cpp
            	skia/src/core/SkPtrRecorder.cpp
            	skia/src/core/SkQuadClipper.cpp
            	skia/src/core/SkQuadTree.cpp
            	skia/src/core/SkRasterClip.cpp
            	skia/src/core/SkRasterizer.cpp
            	skia/src/core/SkReadBuffer.cpp
            	skia/src/core/SkRecordDraw.cpp
            	skia/src/core/SkRecordOpts.cpp
            	skia/src/core/SkRecorder.cpp
            	skia/src/core/SkRecording.cpp
            	skia/src/core/SkRect.cpp
            	skia/src/core/SkRefDict.cpp
            	skia/src/core/SkRegion.cpp
            	skia/src/core/SkRegion_path.cpp
            	skia/src/core/SkRRect.cpp
            	skia/src/core/SkRTree.cpp
            	skia/src/core/SkScaledImageCache.cpp
            	skia/src/core/SkScalar.cpp
            	skia/src/core/SkScalerContext.cpp
            	skia/src/core/SkScan.cpp
            	skia/src/core/SkScan_AntiPath.cpp
            	skia/src/core/SkScan_Antihair.cpp
            	skia/src/core/SkScan_Hairline.cpp
            	skia/src/core/SkScan_Path.cpp
            	skia/src/core/SkShader.cpp
            	skia/src/core/SkSpriteBlitter_ARGB32.cpp
            	skia/src/core/SkSpriteBlitter_RGB16.cpp
            	skia/src/core/SkStream.cpp
            	skia/src/core/SkString.cpp
            	skia/src/core/SkStringUtils.cpp
            	skia/src/core/SkStroke.cpp
            	skia/src/core/SkStrokeRec.cpp
            	skia/src/core/SkStrokerPriv.cpp
            	skia/src/core/SkTileGrid.cpp
            	skia/src/core/SkTLS.cpp
            	skia/src/core/SkTSearch.cpp
            	skia/src/core/SkTypeface.cpp
            	skia/src/core/SkTypefaceCache.cpp
            	skia/src/core/SkUnPreMultiply.cpp
            	skia/src/core/SkUtils.cpp
            	skia/src/core/SkValidatingReadBuffer.cpp
            	skia/src/core/SkVertState.cpp
            	skia/src/core/SkWriteBuffer.cpp
            	skia/src/core/SkWriter32.cpp
            	skia/src/core/SkXfermode.cpp
            	skia/src/doc/SkDocument.cpp
            	skia/src/image/SkImage.cpp
            	skia/src/image/SkImagePriv.cpp
            	skia/src/image/SkImage_Codec.cpp
            	skia/src/image/SkImage_Raster.cpp
            	skia/src/image/SkSurface.cpp
            	skia/src/image/SkSurface_Raster.cpp
            	skia/src/pipe/SkGPipeRead.cpp
            	skia/src/pipe/SkGPipeWrite.cpp
            	skia/src/lazy/SkCachingPixelRef.cpp
            	skia/src/pathops/SkAddIntersections.cpp
            	skia/src/pathops/SkDCubicIntersection.cpp
            	skia/src/pathops/SkDCubicLineIntersection.cpp
            	skia/src/pathops/SkDCubicToQuads.cpp
            	skia/src/pathops/SkDLineIntersection.cpp
            	skia/src/pathops/SkDQuadImplicit.cpp
            	skia/src/pathops/SkDQuadIntersection.cpp
            	skia/src/pathops/SkDQuadLineIntersection.cpp
            	skia/src/pathops/SkIntersections.cpp
            	skia/src/pathops/SkOpAngle.cpp
            	skia/src/pathops/SkOpContour.cpp
            	skia/src/pathops/SkOpEdgeBuilder.cpp
            	skia/src/pathops/SkOpSegment.cpp
            	skia/src/pathops/SkPathOpsBounds.cpp
            	skia/src/pathops/SkPathOpsCommon.cpp
            	skia/src/pathops/SkPathOpsCubic.cpp
            	skia/src/pathops/SkPathOpsDebug.cpp
            	skia/src/pathops/SkPathOpsLine.cpp
            	skia/src/pathops/SkPathOpsOp.cpp
            	skia/src/pathops/SkPathOpsPoint.cpp
            	skia/src/pathops/SkPathOpsQuad.cpp
            	skia/src/pathops/SkPathOpsRect.cpp
            	skia/src/pathops/SkPathOpsSimplify.cpp
            	skia/src/pathops/SkPathOpsTriangle.cpp
            	skia/src/pathops/SkPathOpsTypes.cpp
            	skia/src/pathops/SkPathWriter.cpp
            	skia/src/pathops/SkQuarticRoot.cpp
            	skia/src/pathops/SkReduceOrder.cpp
            	skia/src/effects/Sk1DPathEffect.cpp
            	skia/src/effects/Sk2DPathEffect.cpp
            	skia/src/effects/SkAlphaThresholdFilter.cpp
            	skia/src/effects/SkArithmeticMode.cpp
            	skia/src/effects/SkAvoidXfermode.cpp
            	skia/src/effects/SkBicubicImageFilter.cpp
            	skia/src/effects/SkBitmapSource.cpp
            	skia/src/effects/SkBlurDrawLooper.cpp
            	skia/src/effects/SkBlurMask.cpp
            	skia/src/effects/SkBlurImageFilter.cpp
            	skia/src/effects/SkBlurMaskFilter.cpp
            	skia/src/effects/SkColorFilters.cpp
            	skia/src/effects/SkColorFilterImageFilter.cpp
            	skia/src/effects/SkColorMatrix.cpp
            	skia/src/effects/SkColorMatrixFilter.cpp
            	skia/src/effects/SkComposeImageFilter.cpp
            	skia/src/effects/SkCornerPathEffect.cpp
            	skia/src/effects/SkDashPathEffect.cpp
            	skia/src/effects/SkDiscretePathEffect.cpp
            	skia/src/effects/SkDisplacementMapEffect.cpp
            	skia/src/effects/SkDropShadowImageFilter.cpp
            	skia/src/effects/SkEmbossMask.cpp
            	skia/src/effects/SkEmbossMaskFilter.cpp
            	skia/src/effects/SkGpuBlurUtils.cpp
            	skia/src/effects/SkLayerDrawLooper.cpp
            	skia/src/effects/SkLayerRasterizer.cpp
            	skia/src/effects/SkLerpXfermode.cpp
            	skia/src/effects/SkLightingImageFilter.cpp
            	skia/src/effects/SkLumaColorFilter.cpp
            	skia/src/effects/SkMagnifierImageFilter.cpp
            	skia/src/effects/SkMatrixConvolutionImageFilter.cpp
            	skia/src/effects/SkMergeImageFilter.cpp
            	skia/src/effects/SkMorphologyImageFilter.cpp
            	skia/src/effects/SkOffsetImageFilter.cpp
            	skia/src/effects/SkPaintFlagsDrawFilter.cpp
            	skia/src/effects/SkPerlinNoiseShader.cpp
            	skia/src/effects/SkPictureImageFilter.cpp
            	skia/src/effects/SkPixelXorXfermode.cpp
            	skia/src/effects/SkPorterDuff.cpp
            	skia/src/effects/SkRectShaderImageFilter.cpp
            	skia/src/effects/SkStippleMaskFilter.cpp
            	skia/src/effects/SkTableColorFilter.cpp
            	skia/src/effects/SkTableMaskFilter.cpp
            	skia/src/effects/SkTestImageFilters.cpp
            	skia/src/effects/SkTileImageFilter.cpp
            	skia/src/effects/SkMatrixImageFilter.cpp
            	skia/src/effects/SkTransparentShader.cpp
            	skia/src/effects/SkXfermodeImageFilter.cpp
            	skia/src/effects/gradients/SkBitmapCache.cpp
            	skia/src/effects/gradients/SkClampRange.cpp
            	skia/src/effects/gradients/SkGradientShader.cpp
            	skia/src/effects/gradients/SkLinearGradient.cpp
            	skia/src/effects/gradients/SkRadialGradient.cpp
            	skia/src/effects/gradients/SkTwoPointRadialGradient.cpp
            	skia/src/effects/gradients/SkTwoPointConicalGradient.cpp
            	skia/src/effects/gradients/SkTwoPointConicalGradient_gpu.cpp
            	skia/src/effects/gradients/SkSweepGradient.cpp
            	skia/src/images/bmpdecoderhelper.cpp
            	skia/src/images/SkDecodingImageGenerator.cpp
            	skia/src/images/SkForceLinking.cpp
            	skia/src/images/SkImageDecoder.cpp
            	skia/src/images/SkImageDecoder_FactoryDefault.cpp
            	skia/src/images/SkImageDecoder_FactoryRegistrar.cpp
            	skia/src/images/SkImageDecoder_wbmp.cpp
            	skia/src/images/SkImageDecoder_libpng.cpp
            	skia/src/images/SkImageDecoder_libbmp.cpp
            	skia/src/images/SkImageDecoder_libjpeg.cpp
            	skia/src/images/SkJpegUtility.cpp
            	skia/src/images/SkImageEncoder.cpp
            	skia/src/images/SkImageEncoder_Factory.cpp
            	skia/src/images/SkImageEncoder_argb.cpp
            	skia/src/images/SkMovie.cpp
            	skia/src/images/SkPageFlipper.cpp
            	skia/src/images/SkScaledBitmapSampler.cpp
            	skia/src/images/SkStreamHelpers.cpp
            	skia/src/fonts/SkFontMgr_indirect.cpp
            	skia/src/fonts/SkRemotableFontMgr.cpp
            	skia/src/ports/SkGlobalInitialization_default.cpp
            	skia/src/ports/SkMemory_malloc.cpp
            	skia/src/ports/SkOSFile_posix.cpp
            	skia/src/ports/SkOSFile_stdio.cpp
            	skia/src/ports/SkDiscardableMemory_none.cpp
            	skia/src/ports/SkTime_Unix.cpp
            	skia/src/ports/SkTLS_pthread.cpp
            	skia/src/ports/SkXMLParser_empty.cpp
            	skia/src/ports/SkFontHost_FreeType.cpp
            	skia/src/ports/SkFontHost_FreeType_common.cpp
            	skia/src/ports/SkDebug_android.cpp
            	skia/src/ports/SkFontConfigInterface_android.cpp
            	skia/src/ports/SkFontConfigParser_android.cpp
            	skia/src/ports/SkFontHost_fontconfig.cpp
            	skia/src/sfnt/SkOTTable_name.cpp
            	skia/src/sfnt/SkOTUtils.cpp
            	skia/src/utils/SkCondVar.cpp
            	skia/src/utils/SkCountdown.cpp
            	skia/src/utils/SkBase64.cpp
            	skia/src/utils/SkBitmapHasher.cpp
            	skia/src/utils/SkBitSet.cpp
            	skia/src/utils/SkBoundaryPatch.cpp
            	skia/src/utils/SkFrontBufferedStream.cpp
            	skia/src/utils/SkCamera.cpp
            	skia/src/utils/SkCanvasStack.cpp
            	skia/src/utils/SkCanvasStateUtils.cpp
            	skia/src/utils/SkCubicInterval.cpp
            	skia/src/utils/SkCullPoints.cpp
            	skia/src/utils/SkDashPath.cpp
            	skia/src/utils/SkDeferredCanvas.cpp
            	skia/src/utils/SkDumpCanvas.cpp
            	skia/src/utils/SkEventTracer.cpp
            	skia/src/utils/SkGatherPixelRefsAndRects.cpp
            	skia/src/utils/SkInterpolator.cpp
            	skia/src/utils/SkLayer.cpp
            	skia/src/utils/SkMatrix22.cpp
            	skia/src/utils/SkMatrix44.cpp
            	skia/src/utils/SkMD5.cpp
            	skia/src/utils/SkMeshUtils.cpp
            	skia/src/utils/SkNinePatch.cpp
            	skia/src/utils/SkNWayCanvas.cpp
            	skia/src/utils/SkNullCanvas.cpp
            	skia/src/utils/SkOSFile.cpp
            	skia/src/utils/SkParse.cpp
            	skia/src/utils/SkParseColor.cpp
            	skia/src/utils/SkParsePath.cpp
            	skia/src/utils/SkPictureUtils.cpp
            	skia/src/utils/SkPathUtils.cpp
            	skia/src/utils/SkProxyCanvas.cpp
            	skia/src/utils/SkSHA1.cpp
            	skia/src/utils/SkRTConf.cpp
            	skia/src/utils/SkTextureCompressor.cpp
            	skia/src/utils/SkThreadUtils_pthread.cpp
            	skia/src/utils/SkThreadUtils_pthread_other.cpp
            	skia/src/fonts/SkGScalerContext.cpp
            	skia/src/gpu/GrAAHairLinePathRenderer.cpp
            	skia/src/gpu/GrAAConvexPathRenderer.cpp
            	skia/src/gpu/GrAARectRenderer.cpp
            	skia/src/gpu/GrAddPathRenderers_default.cpp
            	skia/src/gpu/GrAllocPool.cpp
            	skia/src/gpu/GrAtlas.cpp
            	skia/src/gpu/GrBitmapTextContext.cpp
            	skia/src/gpu/GrBlend.cpp
            	skia/src/gpu/GrBufferAllocPool.cpp
            	skia/src/gpu/GrCacheable.cpp
            	skia/src/gpu/GrCacheID.cpp
            	skia/src/gpu/GrClipData.cpp
            	skia/src/gpu/GrContext.cpp
            	skia/src/gpu/GrDefaultPathRenderer.cpp
            	skia/src/gpu/GrDistanceFieldTextContext.cpp
            	skia/src/gpu/GrDrawState.cpp
            	skia/src/gpu/GrDrawTarget.cpp
            	skia/src/gpu/GrEffect.cpp
            	skia/src/gpu/GrClipMaskCache.cpp
            	skia/src/gpu/GrClipMaskManager.cpp
            	skia/src/gpu/GrGpu.cpp
            	skia/src/gpu/GrGpuObject.cpp
            	skia/src/gpu/GrGpuFactory.cpp
            	skia/src/gpu/GrInOrderDrawBuffer.cpp
            	skia/src/gpu/GrLayerCache.cpp
            	skia/src/gpu/GrMemoryPool.cpp
            	skia/src/gpu/GrOvalRenderer.cpp
            	skia/src/gpu/GrPaint.cpp
            	skia/src/gpu/GrPath.cpp
            	skia/src/gpu/GrPathRendererChain.cpp
            	skia/src/gpu/GrPathRenderer.cpp
            	skia/src/gpu/GrPathUtils.cpp
            	skia/src/gpu/GrPictureUtils.cpp
            	skia/src/gpu/GrRectanizer_pow2.cpp
            	skia/src/gpu/GrRectanizer_skyline.cpp
            	skia/src/gpu/GrRenderTarget.cpp
            	skia/src/gpu/GrReducedClip.cpp
            	skia/src/gpu/GrResourceCache.cpp
            	skia/src/gpu/GrStencil.cpp
            	skia/src/gpu/GrStencilAndCoverPathRenderer.cpp
            	skia/src/gpu/GrStencilBuffer.cpp
            	skia/src/gpu/GrTraceMarker.cpp
            	skia/src/gpu/GrSWMaskHelper.cpp
            	skia/src/gpu/GrSoftwarePathRenderer.cpp
            	skia/src/gpu/GrSurface.cpp
            	skia/src/gpu/GrTextContext.cpp
            	skia/src/gpu/GrTextStrike.cpp
            	skia/src/gpu/GrTexture.cpp
            	skia/src/gpu/GrTextureAccess.cpp
            	skia/src/gpu/effects/GrConfigConversionEffect.cpp
            	skia/src/gpu/effects/GrBezierEffect.cpp
            	skia/src/gpu/effects/GrConvolutionEffect.cpp
            	skia/src/gpu/effects/GrConvexPolyEffect.cpp
            	skia/src/gpu/effects/GrBicubicEffect.cpp
            	skia/src/gpu/effects/GrCustomCoordsTextureEffect.cpp
            	skia/src/gpu/effects/GrDashingEffect.cpp
            	skia/src/gpu/effects/GrDistanceFieldTextureEffect.cpp
            	skia/src/gpu/effects/GrDitherEffect.cpp
            	skia/src/gpu/effects/GrOvalEffect.cpp
            	skia/src/gpu/effects/GrRRectEffect.cpp
            	skia/src/gpu/effects/GrSimpleTextureEffect.cpp
            	skia/src/gpu/effects/GrSingleTextureEffect.cpp
            	skia/src/gpu/effects/GrTextureDomain.cpp
            	skia/src/gpu/effects/GrTextureStripAtlas.cpp
            	skia/src/gpu/gl/GrGLAssembleInterface.cpp
            	skia/src/gpu/gl/GrGLBufferImpl.cpp
            	skia/src/gpu/gl/GrGLCaps.cpp
            	skia/src/gpu/gl/GrGLContext.cpp
            	skia/src/gpu/gl/GrGLExtensions.cpp
            	skia/src/gpu/gl/GrGLIndexBuffer.cpp
            	skia/src/gpu/gl/GrGLInterface.cpp
            	skia/src/gpu/gl/GrGLNameAllocator.cpp
            	skia/src/gpu/gl/GrGLNoOpInterface.cpp
            	skia/src/gpu/gl/GrGLPath.cpp
            	skia/src/gpu/gl/GrGLProgram.cpp
            	skia/src/gpu/gl/GrGLProgramDesc.cpp
            	skia/src/gpu/gl/GrGLProgramEffects.cpp
            	skia/src/gpu/gl/GrGLRenderTarget.cpp
            	skia/src/gpu/gl/GrGLShaderBuilder.cpp
            	skia/src/gpu/gl/GrGLSL.cpp
            	skia/src/gpu/gl/GrGLStencilBuffer.cpp
            	skia/src/gpu/gl/GrGLTexture.cpp
            	skia/src/gpu/gl/GrGLUtil.cpp
            	skia/src/gpu/gl/GrGLUniformManager.cpp
            	skia/src/gpu/gl/GrGLVertexArray.cpp
            	skia/src/gpu/gl/GrGLVertexBuffer.cpp
            	skia/src/gpu/gl/GrGpuGL.cpp
            	skia/src/gpu/gl/GrGpuGL_program.cpp
            	skia/src/gpu/SkGpuDevice.cpp
            	skia/src/gpu/SkGr.cpp
            	skia/src/gpu/SkGrFontScaler.cpp
            	skia/src/gpu/SkGrPixelRef.cpp
            	skia/src/gpu/SkGrTexturePixelRef.cpp
            	skia/src/image/SkImage_Gpu.cpp
            	skia/src/image/SkSurface_Gpu.cpp
            	skia/src/gpu/gl/SkGLContextHelper.cpp
            	skia/src/gpu/gl/GrGLDefaultInterface_native.cpp
            	skia/src/gpu/gl/android/GrGLCreateNativeInterface_android.cpp
            	skia/src/gpu/gl/android/SkNativeGLContext_android.cpp
            	skia/src/gpu/gl/debug/GrGLCreateDebugInterface.cpp
            	skia/src/gpu/gl/debug/GrBufferObj.cpp
            	skia/src/gpu/gl/debug/GrTextureObj.cpp
            	skia/src/gpu/gl/debug/GrTextureUnitObj.cpp
            	skia/src/gpu/gl/debug/GrFrameBufferObj.cpp
            	skia/src/gpu/gl/debug/GrShaderObj.cpp
            	skia/src/gpu/gl/debug/GrProgramObj.cpp
            	skia/src/gpu/gl/debug/GrDebugGL.cpp
            	skia/src/gpu/gl/debug/SkDebugGLContext.cpp
            	skia/src/gpu/gl/GrGLCreateNullInterface.cpp
            	skia/src/gpu/gl/SkNullGLContext.cpp
            	skia/third_party/etc1/etc1.cpp
            	skia/third_party/ktx/ktx.cpp
            	skia/src/core/SkFlate.cpp
            	skia/third_party/expat/xmlparse.c
            	skia/third_party/expat/xmlrole.c
            	skia/third_party/expat/xmltok.c
                skia/src/opts/SkBitmapProcState_opts_none.cpp
                skia/src/opts/SkBlitMask_opts_none.cpp
                skia/src/opts/SkBlitRow_opts_none.cpp
                skia/src/opts/SkBlurImage_opts_none.cpp
                skia/src/opts/SkMorphology_opts_none.cpp
                skia/src/opts/SkUtils_opts_none.cpp
                skia/src/opts/SkXfermode_opts_none.cpp
            )

target_include_directories(skia PRIVATE
	            ${CMAKE_CURRENT_SOURCE_DIR}/
	            ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/core
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/utils
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/gpu
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/pathops
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/ports
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/effects
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/config
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/gpu/gl
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/pipe
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/images
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/xml
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/core
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/image
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/gpu
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/opts
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/sfnt
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/utils
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/effects
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/lazy
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/third_party/expat
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/third_party/etc1
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/third_party/ktx
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/third_party/externals/libpng
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/third_party/externals/libjpeg
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/third_party/freetype/include
            )

#//////////////

add_library(canvascontext2d STATIC
                CanvasContext/utils/AffineTransform.cpp
                CanvasContext/utils/TypeTraits.cpp
                CanvasContext/utils/TransformationMatrix.cpp
                CanvasContext/utils/SkiaUtils.cpp
                CanvasContext/geometry/FloatPoint.cpp
                CanvasContext/geometry/FloatPoint3D.cpp
                CanvasContext/geometry/FloatQuad.cpp
                CanvasContext/geometry/FloatRect.cpp
                CanvasContext/geometry/FloatSize.cpp
                CanvasContext/geometry/IntRect.cpp
                CanvasContext/geometry/LayoutRect.cpp
                CanvasContext/geometry/RoundedRect.cpp
                CanvasContext/Canvas2D/BitmapImage.cpp
                CanvasContext/Canvas2D/CanvasContext2D.cpp
                CanvasContext/Canvas2D/CanvasGradient.cpp
                CanvasContext/Canvas2D/CanvasPattern.cpp
                CanvasContext/Canvas2D/CanvasStyle.cpp
                CanvasContext/Canvas2D/Color.cpp
                CanvasContext/Canvas2D/ColorData.cpp
                CanvasContext/Canvas2D/CSSParserMode.cpp
                CanvasContext/Canvas2D/CSSValueKeywords.cpp
                CanvasContext/Canvas2D/FontDescription.cpp
                CanvasContext/Canvas2D/DrawLooperBuilder.cpp
                CanvasContext/Canvas2D/Gradient.cpp
                CanvasContext/Canvas2D/GraphicsTypes.cpp
                CanvasContext/Canvas2D/ImageData.cpp
                CanvasContext/Canvas2D/Pattern.cpp
              )

target_include_directories(canvascontext2d PRIVATE
                    CanvasContext/Canvas2D
                    CanvasContext/geometry
                    CanvasContext/utils
                    skia/include/utils
                    skia/include/core
                    skia/include/config
                    skia/include/effects
                    skia/include/gpu
                    thirdparty/v8
                 )

#////////////////////
add_library(freetype STATIC
        skia/third_party/freetype/src/base/ftbbox.c    
	    skia/third_party/freetype/src/base/ftbitmap.c    
	    skia/third_party/freetype/src/base/ftfstype.c    
	    skia/third_party/freetype/src/base/ftglyph.c    
	    skia/third_party/freetype/src/base/ftlcdfil.c    
	    skia/third_party/freetype/src/base/ftstroke.c    
	    skia/third_party/freetype/src/base/fttype1.c    
	    skia/third_party/freetype/src/base/ftxf86.c    
	    skia/third_party/freetype/src/base/ftbase.c    
	    skia/third_party/freetype/src/base/ftsystem.c    
	    skia/third_party/freetype/src/base/ftinit.c    
	    skia/third_party/freetype/src/base/ftgasp.c    
	    skia/third_party/freetype/src/gzip/ftgzip.c    
	    skia/third_party/freetype/src/raster/raster.c    
	    skia/third_party/freetype/src/sfnt/sfnt.c    
	    skia/third_party/freetype/src/smooth/smooth.c    
	    skia/third_party/freetype/src/autofit/autofit.c    
	    skia/third_party/freetype/src/truetype/truetype.c    
	    skia/third_party/freetype/src/cff/cff.c    
	    skia/third_party/freetype/src/psnames/psnames.c    
	    skia/third_party/freetype/src/pshinter/pshinter.c
    )

target_include_directories(freetype PRIVATE
    skia/third_party/freetype/include
    skia/third_party/externals/libpng
)

#//////////////

add_library(png STATIC
            skia/third_party/externals/libpng/png.c    
            skia/third_party/externals/libpng/pngerror.c    
            skia/third_party/externals/libpng/pngget.c    
            skia/third_party/externals/libpng/pngmem.c    
            skia/third_party/externals/libpng/pngpread.c    
            skia/third_party/externals/libpng/pngread.c    
            skia/third_party/externals/libpng/pngrio.c    
            skia/third_party/externals/libpng/pngrtran.c    
            skia/third_party/externals/libpng/pngrutil.c    
            skia/third_party/externals/libpng/pngset.c    
            skia/third_party/externals/libpng/pngtrans.c    
            skia/third_party/externals/libpng/pngwio.c    
            skia/third_party/externals/libpng/pngwrite.c    
            skia/third_party/externals/libpng/pngwtran.c    
            skia/third_party/externals/libpng/pngwutil.c    
        )

target_include_directories(png PRIVATE
    skia/third_party/externals/libpng
    skia/third_party/externals/zlib
)

#  jpeg
add_library(jpeg STATIC
                skia/third_party/externals/libjpeg/jcapimin.c    
                skia/third_party/externals/libjpeg/jcapistd.c    
                skia/third_party/externals/libjpeg/jccoefct.c    
                skia/third_party/externals/libjpeg/jccolor.c    
                skia/third_party/externals/libjpeg/jcdctmgr.c    
                skia/third_party/externals/libjpeg/jchuff.c    
                skia/third_party/externals/libjpeg/jcinit.c    
                skia/third_party/externals/libjpeg/jcmainct.c    
                skia/third_party/externals/libjpeg/jcmarker.c    
                skia/third_party/externals/libjpeg/jcmaster.c    
                skia/third_party/externals/libjpeg/jcomapi.c    
                skia/third_party/externals/libjpeg/jcparam.c    
                skia/third_party/externals/libjpeg/jcphuff.c    
                skia/third_party/externals/libjpeg/jcprepct.c    
                skia/third_party/externals/libjpeg/jcsample.c    
                skia/third_party/externals/libjpeg/jdapimin.c    
                skia/third_party/externals/libjpeg/jdapistd.c    
                skia/third_party/externals/libjpeg/jdatadst.c    
                skia/third_party/externals/libjpeg/jdatasrc.c    
                skia/third_party/externals/libjpeg/jdcoefct.c    
                skia/third_party/externals/libjpeg/jdcolor.c    
                skia/third_party/externals/libjpeg/jddctmgr.c    
                skia/third_party/externals/libjpeg/jdhuff.c    
                skia/third_party/externals/libjpeg/jdinput.c    
                skia/third_party/externals/libjpeg/jdmainct.c    
                skia/third_party/externals/libjpeg/jdmarker.c    
                skia/third_party/externals/libjpeg/jdmaster.c    
                skia/third_party/externals/libjpeg/jdmerge.c    
                skia/third_party/externals/libjpeg/jdphuff.c    
                skia/third_party/externals/libjpeg/jdpostct.c    
                skia/third_party/externals/libjpeg/jdsample.c    
                skia/third_party/externals/libjpeg/jerror.c    
                skia/third_party/externals/libjpeg/jfdctflt.c    
                skia/third_party/externals/libjpeg/jfdctfst.c    
                skia/third_party/externals/libjpeg/jfdctint.c    
                skia/third_party/externals/libjpeg/jidctflt.c    
                skia/third_party/externals/libjpeg/jidctfst.c    
                skia/third_party/externals/libjpeg/jidctint.c    
                skia/third_party/externals/libjpeg/jidctred.c    
                skia/third_party/externals/libjpeg/jmemmgr.c    
                skia/third_party/externals/libjpeg/jmemnobs.c    
                skia/third_party/externals/libjpeg/jquant1.c    
                skia/third_party/externals/libjpeg/jquant2.c    
                skia/third_party/externals/libjpeg/jsimd_none.c    
                skia/third_party/externals/libjpeg/jutils.c    
    )

target_include_directories(jpeg PRIVATE
    skia/third_party/externals/libjpeg
    skia/third_party/externals/zlib
)

#zlib
add_library(zlib STATIC
                skia/third_party/externals/zlib/adler32.c    
                skia/third_party/externals/zlib/compress.c    
                skia/third_party/externals/zlib/crc32.c    
                skia/third_party/externals/zlib/deflate.c    
                skia/third_party/externals/zlib/gzclose.c    
                skia/third_party/externals/zlib/gzlib.c    
                skia/third_party/externals/zlib/gzread.c    
                skia/third_party/externals/zlib/gzwrite.c    
                skia/third_party/externals/zlib/infback.c    
                skia/third_party/externals/zlib/inflate.c    
                skia/third_party/externals/zlib/inftrees.c    
                skia/third_party/externals/zlib/inffast.c    
                skia/third_party/externals/zlib/trees.c    
                skia/third_party/externals/zlib/uncompr.c    
                skia/third_party/externals/zlib/zutil.c    
    )
    
target_include_directories(zlib PRIVATE
    skia/third_party/externals/zlib
)

#runtimecanvas


 add_library(runtimecanvas SHARED
                android/src/main/cpp/gl_code.cpp
                android/src/main/cpp/GlesUtil.cpp
                android/src/main/cpp/SkiaApp.cpp
                android/src/main/cpp/JniShell.cpp
                android/src/main/cpp/EGTLog.cpp
                android/src/main/cpp/StdC.cpp
                skia/third_party/externals/zlib/adler32.c
                skia/third_party/externals/zlib/compress.c
                skia/third_party/externals/zlib/crc32.c
                skia/third_party/externals/zlib/deflate.c
                skia/third_party/externals/zlib/gzclose.c
                skia/third_party/externals/zlib/gzlib.c
                skia/third_party/externals/zlib/gzread.c
                skia/third_party/externals/zlib/gzwrite.c
                skia/third_party/externals/zlib/infback.c
                skia/third_party/externals/zlib/inflate.c
                skia/third_party/externals/zlib/inftrees.c
                skia/third_party/externals/zlib/inffast.c
                skia/third_party/externals/zlib/trees.c
                skia/third_party/externals/zlib/uncompr.c
                skia/third_party/externals/zlib/zutil.c
            )

 target_include_directories(runtimecanvas PRIVATE
                        CanvasContext/Canvas2D
                        CanvasContext/geometry
                        CanvasContext/utils
                        skia/include/core
                        skia/include/utils
                        skia/include/gpu
                        skia/include/pathops
                        skia/include/ports
                        skia/include/effects
                        skia/include/config
                        skia/include/gpu/gl
                        skia/include/pipe
                        skia/include/images
                        skia/include/xml
                        skia/src/core
                        skia/src/image
                        skia/include
                        skia/src/gpu
                        skia/src/opts
                        skia/src/sfnt
                        skia/src/utils
                        skia/src/effects
                        skia/src/lazy
                        skia/third_party/expat
                        skia/third_party/etc1
                        skia/third_party/ktx
                        skia/third_party/externals/libpng
                        skia/third_party/externals/libjpeg
                        skia/third_party/freetype/include
                      )


target_link_libraries(runtimecanvas
                    log
                    EGL
                    GLESv2
                    android
                    zlib
                    canvascontext2d
                    skia
                    freetype
                    png
                    jpeg
                    )
